# rusty_db

./: BACKLOG.md  Cargo.toml  README.md
crates/rusty-db-core/: Cargo.toml
crates/rusty-db-core/src/: audit.rs  autogenerate.rs  automap.rs  backup.rs  connection.rs  dialect.rs  engine.rs  error.rs  lib.rs  mapping.rs  migration.rs  pool.rs  relations.rs  replica.rs  row.rs  schema.rs  session.rs  shard.rs  timeout.rs  value.rs
crates/rusty-db-core/src/query/: bulk_insert.rs  cte.rs  ddl.rs  delete.rs  expr.rs  insert.rs  join.rs  mod.rs  select.rs  set_op.rs  table.rs  tests.rs  update.rs
crates/rusty-db-derive/: Cargo.toml
crates/rusty-db-derive/src/: lib.rs
crates/rusty-db-mysql/: Cargo.toml
crates/rusty-db-mysql/src/: lib.rs
crates/rusty-db-postgres/: Cargo.toml
crates/rusty-db-postgres/src/: lib.rs
crates/rusty-db-sqlite/: Cargo.toml
crates/rusty-db-sqlite/src/: lib.rs
rusty_db/: Cargo.toml
rusty_db/src/: lib.rs
rusty_db/tests/: array_value.rs  array_value_mysql.rs  array_value_postgres.rs  audit_log.rs  audit_log_mysql.rs  audit_log_postgres.rs  autoflush.rs  autogenerate.rs  autogenerate_mysql.rs  autogenerate_postgres.rs  automap.rs  backup_restore.rs  backup_restore_mysql.rs  backup_restore_postgres.rs  bulk_insert.rs  bulk_insert_mysql.rs  bulk_insert_postgres.rs  bulk_update_delete.rs  bulk_update_delete_mysql.rs  bulk_update_delete_postgres.rs  concurrent_sessions.rs  concurrent_sessions_mysql.rs  concurrent_sessions_postgres.rs  ddl.rs  ddl_mysql.rs  ddl_postgres.rs  decimal_value.rs  decimal_value_mysql.rs  decimal_value_postgres.rs  hybrid_properties.rs  identity_map.rs  json_value.rs  json_value_mysql.rs  json_value_postgres.rs  lifecycle_hooks.rs  mapped_and_joins.rs  mapped_defaults.rs  mapped_enum.rs  mapped_newtype.rs  migration_cli.rs  (+56 more)
