[workspace]
resolver = "2"
members = [
    "crates/rusty-db-core",
    "crates/rusty-db-sqlite",
    "crates/rusty-db-postgres",
    "rusty_db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_db"

[workspace.dependencies]
rusty-db-core = { path = "crates/rusty-db-core", version = "0.1.0" }
rusty-db-sqlite = { path = "crates/rusty-db-sqlite", version = "0.1.0" }
rusty-db-postgres = { path = "crates/rusty-db-postgres", version = "0.1.0" }
async-trait = "0.1"
thiserror = "1"
futures-core = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls"] }
