[package]
name = "rusty-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A database-agnostic query builder and connection abstraction, in the spirit of SQLAlchemy Core"

[dependencies]
rusty-db-core.workspace = true
rusty-db-derive = { workspace = true, optional = true }
rusty-db-sqlite = { workspace = true, optional = true }
rusty-db-postgres = { workspace = true, optional = true }
rusty-db-mysql = { workspace = true, optional = true }

[features]
default = []
derive = ["dep:rusty-db-derive"]
sqlite = ["dep:rusty-db-sqlite"]
postgres = ["dep:rusty-db-postgres"]
mysql = ["dep:rusty-db-mysql"]

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
