[package]
name = "rusty-db-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "#[derive(Mapped)] macro for rusty_db: maps a struct to a table"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
proc-macro-crate.workspace = true
