[package]
name = "rusty-db-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL driver for rusty_db, built on sqlx"

[dependencies]
rusty-db-core.workspace = true
async-trait.workspace = true
sqlx = { workspace = true, features = ["postgres"] }

[dev-dependencies]
tokio.workspace = true
