[package]
name = "rusty-db-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite driver for rusty_db, built on sqlx"

[dependencies]
rusty-db-core.workspace = true
async-trait.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }

[dev-dependencies]
tokio.workspace = true
